--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,39 @@
 
+:root{
+    --dark-blue: #264653;
+    --blue: #2a9d8f;
+    --yellow: #e9c46a;
+    --orange: #f4a261;
+    --dark-orange: #e76f51;
+}
+
+#header{
+  background-color: var(--dark-orange);
+  border: 4px solid var(--yellow);
+}
+
+.button{
+color: white;
+background-color: var(--yellow);
+}
+
+#movie_card{
+border: 10px solid var(--dark-blue);
+border-color: var(--blue);
+font-family: Trebuchet MS, sans-serif;
+background-color: var(--blue);
+
+}
+
+#search_results_txt{
+  font-size: large;
+  
+}
+
+#load_more{
+  color: white;
+  background-color: var(--dark-blue);
+  margin-top: 15px;
+}
+
+
