--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ border: 4px solid var(--yellow);
 color:black;
 background-color: var(--yellow);
 font-family: 'Crimson Text', serif;
-font-size: small;
+font-size: medium;
 }
 
 #movie_card{
@@ -30,11 +30,11 @@ font-family: 'Crimson Text', serif;
 background-color: var(--blue);
 
 }
-
-#search_results_txt{
-font-size: large;
-font-family: 'Crimson Text', serif;
-
+#search_results_txt {
+  font-size: 35px;
+  text-decoration: underline;
+  font-weight: bolder;
+  font-family: 'Crimson Text', serif;
 }
 
 #load_more{
@@ -43,12 +43,10 @@ background-color: var(--dark-blue);
 margin-top: 15px;
 }
 
-
 #movie_card-column{
 display: flex;
 font-family: 'Crimson Text', serif;
 font-size: medium;
-
 
 }
 img {
@@ -62,24 +60,34 @@ flex-wrap: wrap;
 p{
 font-family: 'Crimson Text', serif;
 text-decoration: underline ;
+font-weight: 200;
 color:black;
 text-align: center;
+font-size: medium;
 }
 
-h4, h5{
-text-align: center;
-font-size:larger;
-text-decoration: none;
+h4{
 font-family: 'Crimson Text', serif;
-font-size: medium;
+text-align: center;
+font-weight: bold;
+font-size:large;
+text-size-adjust:inherit ;
 color: black;
 }
+h5{
+  text-align: center;
+  font-size:20px;
+  font-weight: 500;
+  font-family: 'Crimson Text', serif;
+  color: black;
+  }
 h6{
 font-family: 'Crimson Text', serif;
-font-size: x-large;
+font-size: 40px;
 text-decoration: bold;
 text-align: center;
 }
+
 ul.menu {
 background-color:#e76f51;
 }
@@ -88,10 +96,17 @@ label {
 font-family: 'Crimson Text', serif;
 display: block;
 margin: 0;
-font-size: .875rem;
+font-size: 15px;
 line-height: 1.8;
 color: #0a0a0a;
 }
-#top-right-bar{
-text-align:start;
+
+.callout{
+  margin: 0 0 1rem;
+  padding: 1rem;
+  border: 1px solid var(--yellow);
+  border-radius: 0;
+  position: inherit;
+  background-color: #fff;
+  border-width: medium;
 }
