--- a/assets/style.css
+++ b/assets/style.css
@@ -16,11 +16,25 @@ background-color: var(--dark-orange);
 border: 4px solid var(--yellow);
 }
 
+#header-title{
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-size: 50px;
+}
+
 .button{
 color:black;
 background-color: var(--yellow);
 font-family: 'Crimson Text', serif;
 font-size: medium;
+}
+
+.description{
+  font-size: 25px;
+  text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border: 7px solid var(--blue);
+  margin-top: -30px;
+  margin-bottom: 10px;
 }
 
 #movie_card{
@@ -120,4 +134,11 @@ color: #0a0a0a;
 #providers-font{
   font-size: 20px;
   font-family: 'Times New Roman', Times, serif;
+}
+
+#movie-title-decoration{
+  font-size: 30px;
+  font-weight: bolder;
+  text-align: center;
+  font-family:'Courier New', Courier, monospace;
 }
